--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<META name="description" content="Project created with Motiva COLIMO">
-<META name="keywords" content="motiva, infografia, 3d, COLIMO, postproduction, development, i+d, motivacg">
 <title>Colimo web sample</title>
-<link rel="stylesheet" href="Kuhinje Kucevic_.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="index.css" type="text/css" media="screen" />
 <style type="text/css">
 .hidden {
 	visibility: hidden;
