--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Colimo web sample</title>
+<title>Colorize Kitchen</title>
 <link rel="stylesheet" href="index.css" type="text/css" media="screen" />
 <style type="text/css">
 .hidden {
@@ -340,7 +340,7 @@ matNamesArray[2][105]="FU 34";
 </head>
 <body>
 <div id="centrator" class="container" style="margin-top:25px; border-width:0px; width:600px;">
-<p class="cabecera">Kuhinje Ku&#269;evi&#263;</p>
+<p class="cabecera">Napravite svoju kobminaciju boja i printa</p>
 <form ENCTYPE="multipart/form-data" action="" name="states">
 <table width="1400" border="1">
   <tr>
